--- a/style/bluewide.css
+++ b/style/bluewide.css
@@ -8,6 +8,8 @@ Shout-outs go to drmathochist, Marina, femanon, seisatsu, Ferus, etc. I <3 you a
 
 body {
     background-color:#e7f4ff;
+    margin-left:6em;
+    margin-right:6em;
 }
 
 #logo { display:none; } body { padding:1em 1em 0 1em; }
@@ -17,8 +19,6 @@ body {
     -moz-box-shadow:0px 1px 3px rgba(0,0,0,0.35);
     box-shadow:0px 1px 3px rgba(0,0,0,0.35);
     -webkit-box-shadow:0px 1px 3px rgba(0,0,0,0.35);
-    margin-left;20%
-    margin-right;20%
 }
 
 .codebox {
